infra/k8s/auth-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        ports:
        - containerPort: 27017
