infra/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: benny0329/expiration
        ports:
        - containerPort: 3000
