infra/k8s/expiration-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deployment
spec:
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
      - name: expiration-redis
        image: redis 
        ports:
        - containerPort: 6379
