infra/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders 
  template:
    metadata:
      labels:
        app: orders 
    spec:
      containers:
      - name: orders 
        image: benny0329/orders
        ports:
        - containerPort: 3000
