infra/k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments 
  template:
    metadata:
      labels:
        app: payments 
    spec:
      containers:
      - name: payments 
        image: benny0329/payments
        ports:
        - containerPort: 3000
