infra/k8s/payments-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
      - name: payments-mongo
        image: mongo
        ports:
        - containerPort: 27017
