infra/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 3000
    targetPort: 3000
