infra/k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
