infra/k8s/expiration-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis
spec:
  selector:
    app: expiration-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379 
    targetPort: 6379
