infra/k8s/orders-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo
spec:
  selector:
    app: orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
