infra/k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders 
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - name: orders
    protocol: TCP
    port: 3000
    targetPort: 3000
