infra/k8s/payments-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo
spec:
  selector:
    app: payments-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
