infra/k8s/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
  - name: payments
    protocol: TCP
    port: 3000
    targetPort: 3000
