infra/k8s/tickets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 3000
    targetPort: 3000
