infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ticketing.io
    http:
      paths:
      - pathType: Prefix
        path: /api/users/?(.*)
        backend:
          service:
            name: auth
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/tickets/?(.*)
        backend:
          service:
            name: tickets
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/orders/?(.*)
        backend:
          service:
            name: orders 
            port: 
              number: 3000
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client
            port: 
              number: 3000
